--- a/style.css
+++ b/style.css
@@ -64,5 +64,14 @@ main, #banner-wrapper, #palindrome-section, #faq-section {
   width: 60%;
   padding: 20px;
   border: solid white 3px;
- 
+}
+
+.faq-para {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.faq-list {
+  font-weight: bolder;
+  color: rgb(248, 248, 109);
 }
